# sphinx_cli_recorder

./: .autorc  .buildinfo  .gitignore  .pre-commit-config.yaml  00_quickstart.html  01_installation.html  02_limitation.html  02_usage.html  04_limitation.html  05_configuration.html  10_roadmap.html  20_security.html  30_internals.html  90_dependencies.html  95_license.html  CHANGELOG.md  CNAME  LICENSE  README.md  genindex.html  initial_test.ipynb  intro.html  justfile  objects.inv  package-lock.json  package.json  pyproject.toml  search.html  searchindex.js  serve.py  serve_docs.py  sphinx_basics.md  tmp.py
.auto/: README.md  run_auto.sh  update_version.sh
.doctrees/: 00_quickstart.doctree  01_installation.doctree  02_limitation.doctree  02_usage.doctree  04_limitation.doctree  05_configuration.doctree  10_roadmap.doctree  20_security.doctree  30_internals.doctree  90_dependencies.doctree  95_license.doctree  environment.pickle  intro.doctree
.doctrees/general/: code_of_conduct.doctree  dependencies.doctree  license.doctree
.github/: CONTRIBUTING.md  FUNDING.yml  config.yml
.github/workflows/: main.yml  pypi.yml  skip_test.yml  test.yml
_recs/: 00_quickstart-asciinema-0.rec  00_quickstart-asciinema-1.rec  00_quickstart-asciinema-2.rec  00_quickstart-asciinema-3.rec  02_usage-asciinema-0.rec  02_usage-asciinema-1.rec  02_usage-asciinema-2.rec  05_configuration-asciinema-0.rec  05_configuration-asciinema-1.rec  05_configuration-asciinema-10.rec  05_configuration-asciinema-11.rec  05_configuration-asciinema-12.rec  05_configuration-asciinema-13.rec  05_configuration-asciinema-14.rec  05_configuration-asciinema-2.rec  05_configuration-asciinema-3.rec  05_configuration-asciinema-4.rec  05_configuration-asciinema-5.rec  05_configuration-asciinema-6.rec  05_configuration-asciinema-7.rec  05_configuration-asciinema-8.rec  05_configuration-asciinema-9.rec  intro-asciinema-0.rec  intro-asciinema-1.rec  intro-asciinema-2.rec
_sources/: 00_quickstart.md.txt  01_installation.md.txt  02_limitation.md.txt  02_usage.md.txt  04_limitation.md.txt  05_configuration.md.txt  10_roadmap.md.txt  20_security.md.txt  30_internals.md.txt  intro.md.txt
_static/: asciinema-player.min.js  custom-asciinema-rules.css
asciinema_sphinx/: __init__.py
docs/: 00_quickstart.md  01_customization.md  01_installation.md  02_roadmap.md  02_usage.md  04_limitation.md  05_configuration.md  10_roadmap.md  30_internals.md  _toc.yml  conf.py  index.rst  intro.md
docs/mermaid_files/: decision.mmd
general/: code_of_conduct.html  dependencies.html  license.html
sphinx_auto_asciinema/: __init__.py  asciinema-player.min.js  asciinema_player_settings.py  scripted_asciicast_runner.py  scripted_cmds.py  test.py  test.rec
sphinx_auto_asciinema/testing/: animation_example.py  prompt.py
sphinx_cli_recorder/: __init__.py  asciinema_block_parser.py  asciinema_player_settings.py  scripted_asciinema_runner.py  scripted_cmds.py
sphinx_cli_recorder/testing/: animation_example.py  prompt.py  tiny_prompt.py
src/sphinx_cli_recorder/: __init__.py  asciinema_player_settings.py  scripted_asciinema_runner.py  scripted_cmds.py
src/sphinx_cli_recorder/testing/: animation_example.py  tiny_prompt.py
tests/: __init__.py  test_asciinema_block_parser.py  test_asciinema_player_settings_val.py  test_scripted_asciicast.py  test_scripted_asciinema.py  test_scripted_cmds.py
