[tool.poetry]
name = "sphinx-auto-asciinema"
version = "0.1.0"
description = ""
authors = ["Kai Norman Clasen <k.clasen@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
# asciinema = "^2.1.0"
asciinema = { git = "https://github.com/asciinema/asciinema", branch = "develop"}
Sphinx = "^4.4.0"
pexpect = "^4.8.0"
unsync = "^1.4.0"
asyncer = "^0.0.1"
fastcore = "^1.3.27"
antidote = "^1.0.1"
pydantic = "^1.9.0"
PyYAML = "^6.0"
yamale = "^4.0.3"

[tool.poetry.dev-dependencies]
rich = "^11.2.0"
jupyter = "^1.0.0"
livereload = "^2.6.3"
nodeenv = "^1.6.0"
pytest = "^7.0.1"
icecream = "^2.1.2"
pytest-asyncio = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli_hello = "sphinx_auto_asciinema:_cli_hello"

[tool.pytest.ini_options]
asyncio_mode = "strict"
