[tool.poetry]
name = "sphinx-cli-recorder"
version = "0.1.3"
description = "A Sphinx extension that runs/automates recordings of CLI applications, without requiring any external services."
authors = ["Kai Norman Clasen <k.clasen@protonmail.com>"]
license = "GNU General Public License v3"
readme = "README.md"
homepage = "https://github.com/kai-tub/sphinx_cli_recorder/"
repository = "https://github.com/kai-tub/sphinx_cli_recorder/"
documentation = "https://github.com/kai-tub.github.io/sphinx_cli_recorder"

include = [
    "LICENSE",
    # overwrite inherited exclude from .gitignore!
    "asciinema-player.css",
    "asciinema-player.min.js",
]

[tool.poetry.dependencies]
# dependencies-start
python = "^3.8"
asciinema = "^2.2.0"
Sphinx = "^4.4.0"
pexpect = "^4.8.0"
unsync = "^1.4.0"
asyncer = "^0.0.1"
pydantic = "^1.9.0"
PyYAML = "^6.0"
yamale = "^4.0.3"
# dependencies-end

[tool.poetry.dev-dependencies]
autodoc-pydantic = "^1.6.1"
rich = "^11.2.0"
jupyter = "^1.0.0"
livereload = "^2.6.3"
nodeenv = "^1.6.0"
pytest = "^7.0.1"
icecream = "^2.1.2"
pytest-asyncio = "^0.18.1"
furo = "^2022.3.4"
myst-parser = {extras = ["linkify"], version = "^0.17.0"}
sphinx-external-toc = "^0.2.4"
sphinx-inline-tabs = "^2022.1.2-beta.11"
sphinxcontrib-mermaid = "^0.7.1"
sphinx-design = "^0.0.13"
rich-cli = "^1.5.1"
sphinx-comments = "^0.0.3"
pre-commit = "^2.17.0"
isort = "^5.10.1"
black = "^22.3.0"
mypy = "^0.942"
types-PyYAML = "^6.0.5"
types-docutils = "^0.18.0"
sphinx-autodoc-typehints = "^1.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.isort]
profile = "black"
